Prevent line-wrap on user-info

--- a/media/css/do.css
+++ b/media/css/do.css
@@ -321,6 +321,7 @@ height:5em;
 #user-info > span {
 margin-left:1.75em;
 float:left;
+width:calc(100% - 1.75em);
 }
 #user-info img {
 display:block;
